# NSimpleClipper

./: .gitignore  CMakeLists.txt  README.md
resource/: NSimpleClippereditor.uidesc
source/: NSimpleClippercids.h  NSimpleClippercontroller.cpp  NSimpleClippercontroller.h  NSimpleClipperentry.cpp  NSimpleClipperprocessor.cpp  NSimpleClipperprocessor.h  version.h
